renew and delete session; limits for pending and sessions
